--- a/examples/kliko.html
+++ b/examples/kliko.html
@@ -3,11 +3,10 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="initial-scale=1">
-      <title>TodoMVC - gotoв</title>
+      <title>Kliko!</title>
    </head>
    <body>
-      <noscript>Javascript is deactivated in your browser. Please activate it in order to use this page.</noscript>
       <script src="../gotoB.min.js"></script>
-      <script src="todomvc.js"></script>
+      <script src="kliko.js"></script>
    </body>
 </html>
