--- a/examples/app.html
+++ b/examples/app.html
@@ -3,11 +3,14 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>TodoMVC - gotoв</title>
+      <title>gotoв!</title>
+      <!-- Stylesheets go here -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
    </head>
    <body>
       <noscript>Javascript is deactivated in your browser. Please activate it in order to use this page.</noscript>
+      <!-- Scripts go here -->
       <script src="../gotoB.min.js"></script>
-      <script src="todomvc.js"></script>
+      <script src="app.js"></script>
    </body>
 </html>
